--- a/Kotlin/RoomDatabase-master/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/RoomDatabase-master/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:tint="@color/white"
-        app:srcCompat="@drawable/ic_add_black_24dp" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:backgroundTint="@android:color/white"/>
 
 </android.support.design.widget.CoordinatorLayout>
